--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 
 <body>
-    <h1>TRABAJO HOME</h1>
+    <h1 style="color:green;">TRABAJO HOME</h1>
     <p>empezando a romperme la cabeza con los ejercicios</p>
     <img src="playa.jpg" alt="playa.jpg">
 
 
 </body>
+
+<footer><img src="footer.png" alt="">
+    <footer class="png"></footer>
+</footer>
 
 </html>
