error en codigo enlace

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 style="color:green;">TRABAJO HOME</h1>
     <p>empezando a romperme la cabeza con los ejercicios</p>
     <img src="playa.jpg" alt="playa.jpg">
-
+    <a href="file:///C:/Users/David/OneDrive/Escritorio/NEOLAND/Deberes/Galer%C3%ADa/galeria/galeria.html"></a>
 
 </body>
 
