--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     <h1 style="color:green;">TRABAJO HOME</h1>
     <p>empezando a romperme la cabeza con los ejercicios</p>
     <img src="playa.jpg" alt="playa.jpg">
-    <a href="file:///C:/Users/David/OneDrive/Escritorio/NEOLAND/Deberes/Galer%C3%ADa/galeria/galeria.html"></a>
+    <a
+        href="file:///C:/Users/David/OneDrive/Escritorio/NEOLAND/Deberes/Galer%C3%ADa/galeria/galeria.html">GALERÍA</A></a>
 
 </body>
 
 <footer><img src="footer.png" alt="">
     <footer class="png"></footer>
+    <p>copyright&copy;2021 <a href="#">Aviso Legal</a></p>
 </footer>
 
 </html>
