--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="galeria.html">galeria</a></li>
+                <li><a href="home.html">home</a></li>
+            </ul>
+        </nav>
+    </header>
     <h1 style="color:green;">TRABAJO HOME</h1>
     <p>empezando a romperme la cabeza con los ejercicios</p>
     <img src="playa.jpg" alt="playa.jpg">
