--- a/contacto.html
+++ b/contacto.html
@@ -17,10 +17,14 @@
             </ul>
         </nav>
     </header>
-    <h1 style="color:green;">TRABAJO HOME</h1>
+    <h1 style="color:green;">CONTACTO</h1>
     <p>empezando a romperme la cabeza con los ejercicios</p>
     <img src="playa.jpg" alt="playa.jpg">
     <link rel="stylesheet" href="style.css">
+
+
+    <a href="mailto:davidgarrosa_7@hotmail.com">davidgarrosa_7@hotmail.com</a>
+    <a href="tel:698388129">698388129</a>
 
 
 </body>
