--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <ul>
                 <li><a href="galeria.html">galeria</a></li>
                 <li><a href="home.html">home</a></li>
+                <li><a href="servicios.html">servicios</a></li>
+                <li><a href="contacto.html">contacto</a></li>
             </ul>
         </nav>
     </header>
