--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="home.html">home</a></li>
                 <li><a href="servicios.html">servicios</a></li>
                 <li><a href="contacto.html">contacto</a></li>
+                <li><a href="blog.html">blog</a></li>
             </ul>
         </nav>
     </header>
