cambio de nombre encabezado

--- a/servicios.html
+++ b/servicios.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
     </header>
-    <h1 style="color:green;">CONTACTO</h1>
+    <h1 style="color:green;">servicios</h1>
     <p>empezando a romperme la cabeza con los ejercicios</p>
     <img src="playa.jpg" alt="playa.jpg">
     <link rel="stylesheet" href="style.css">
