--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
     </header>
-    <h1 style="color:green;">BLOG</h1>
+    <h1 style="color:green;">BLOG</h1>blog de mis amigos
 
     <section>
         <h2>Articulos destacados</h2>
